# graphQlTestMagazinApi5

./: pyproject.toml
backend/: db.sqlite3
backend/api/admin/: __init__.py  countries.py
backend/api/graphql/: __init__.py
backend/api/graphql/countries/: country_node.py  query_get_list_countries.py
backend/api/migrations/: 0001_initial.py  0002_auto_20211022_1614.py
backend/api/models/: __init__.py  countries.py
backend/backend/: graphql.py  settings.py  urls.py
