[tool.poetry]
name = "graphqltestmagazinapi5"
version = "0.1.0"
description = ""
authors = ["Igor <izolotuxin@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.1"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
